# notbook

./: pyproject.toml  render.yaml  requirements.txt
memories/: admin.py  context_processors.py  forms.py  models.py  urls.py  views.py
memories/migrations/: 0001_initial.py
memories/templates/notebook/: base.html  edit_interest.html  edit_memory.html  edit_profile.html  footer.html  header.html  index.html  lefter.html  memories.html  memory.html  new_memory.html  righter.html
notebook/: settings.py  urls.py
staticfiles/assets/js/: jquery-migrate-1.2.1.min.js
users/: forms.py  urls.py  views.py
users/templates/users/: login.html  logout.html  register.html
